--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,11 +35,11 @@ body::before {
 }
 
 a {
-  color: #18d26e;
+  color: #0077ff;
 }
 
 a:hover {
-  color: #35e888;
+  color: #0077ff;
   text-decoration: none;
 }
 
@@ -87,7 +87,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header h2 span {
   color: #fff;
-  border-bottom: 2px solid #18d26e;
+  border-bottom: 2px solid #0077ff;
   padding-bottom: 6px;
 }
 
@@ -116,8 +116,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .social-links a:hover {
-  background: #18d26e;
+  background: #0077ff;
 }
+
 
 @media (max-width: 992px) {
   #header h1 {
@@ -172,7 +173,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 2px;
   bottom: -4px;
   left: 0;
-  background-color: #18d26e;
+  background-color: #0077ff;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -241,7 +242,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #18d26e;
+  color: #0077ff;
   text-decoration: none;
 }
 
@@ -360,7 +361,7 @@ section .container {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #4ceb95;
+  background: #0077ff;
   margin: 4px 10px;
 }
 
@@ -380,7 +381,7 @@ section .container {
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #18d26e;
+  color: #0077ff;
 }
 
 .about-me .content ul {
@@ -395,7 +396,7 @@ section .container {
 .about-me .content ul i {
   font-size: 20px;
   padding-right: 2px;
-  color: #18d26e;
+  color: #0077ff;
 }
 
 .about-me .content p:last-child {
@@ -425,7 +426,7 @@ section .container {
   font-size: 24px;
   background: rgba(255, 255, 255, 0.1);
   padding: 12px;
-  color: #18d26e;
+  color: #0077ff;
   border-radius: 50px;
 }
 
@@ -475,7 +476,7 @@ section .container {
   width: 1px;
   height: 10px;
   transition: .9s;
-  background-color: #18d26e;
+  background-color: #0077ff;
 }
 
 /*--------------------------------------------------------------
@@ -582,7 +583,7 @@ section .container {
 }
 
 .testimonials .owl-dot.active {
-  background-color: #18d26e !important;
+  background-color: #0077ff !important;
 }
 
 @media (max-width: 767px) {
@@ -615,7 +616,7 @@ section .container {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #18d26e;
+  color: #0077ff;
   margin-bottom: 10px;
 }
 
@@ -648,8 +649,8 @@ section .container {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #0077ff;
+  border: 2px solid #0077ff;
 }
 
 /*--------------------------------------------------------------
@@ -666,7 +667,7 @@ section .container {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #18d26e;
+  background: #0077ff;
   border-radius: 5px;
   transition: all .3s ease-out 0s;
   display: flex;
@@ -711,8 +712,8 @@ section .container {
 }
 
 .services .icon-box:hover {
-  background: #18d26e;
-  border-color: #18d26e;
+  background: #0077ff;
+  border-color: #0077ff;
 }
 
 .services .icon-box:hover .icon {
@@ -720,7 +721,7 @@ section .container {
 }
 
 .services .icon-box:hover .icon i {
-  color: #18d26e;
+  color: #0077ff;
 }
 
 .services .icon-box:hover .icon::before {
@@ -763,7 +764,7 @@ section .container {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: #0077ff;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -900,7 +901,7 @@ section .container {
 
 .contact .info-box i.bx {
   font-size: 24px;
-  color: #18d26e;
+  color: #0077ff;
   border-radius: 50%;
   padding: 14px;
   float: left;
@@ -937,7 +938,7 @@ section .container {
 }
 
 .contact .info-box .social-links a:hover {
-  color: #18d26e;
+  color: #0077ff;
 }
 
 .contact .php-email-form {
@@ -969,7 +970,7 @@ section .container {
 .contact .php-email-form .sent-message {
   display: none;
   background: rgba(255, 255, 255, 0.08);
-  background: #18d26e;
+  background: #0077ff;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -989,7 +990,7 @@ section .container {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid #0077ff;
   border-top-color: #eee;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -1043,7 +1044,7 @@ section .container {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #18d26e;
+  background: #0077ff;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1113,7 +1114,7 @@ section .container {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #18d26e !important;
+  background-color: #0077ff !important;
 }
 
 .portfolio-details .portfolio-info {
@@ -1171,7 +1172,7 @@ section .container {
 }
 
 .credits a {
-  color: #18d26e;
+  color: #0077ff;
   transition: 0.3s;
 }
 
