--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
 }
 
+
 #header .social-links a {
   font-size: 16px;
   display: flex;
@@ -113,6 +114,19 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50%;
   width: 40px;
   height: 40px;
+}
+
+
+
+#header .cert-icons {
+  font-size: 16px;
+  display: flex;
+  margin-top: 40px;
+}
+
+#header .cert-icons a{
+  font-size: 16px;
+  display: flex;
 }
 
 #header .social-links a:hover {
@@ -135,6 +149,15 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  #header .cert-icons {
+    margin-top: 15px;
+  }
+
+  #header .cert-icons a{
+    font-size: 16px;
+    display: flex;
   }
 }
 
@@ -285,6 +308,11 @@ h1, h2, h3, h4, h5, h6 {
 #header.header-top .social-links, #header.header-top h2 {
   display: none;
 }
+
+#header.header-top .cert-icons, #header.header-top h2 {
+  display: none;
+}
+
 
 #header.header-top h1 {
   margin-right: auto;
